# simple-rust-api

./: Cargo.toml  LICENSE  README.md
src/: handler.rs  main.rs  model.rs  response.rs
